updated templates and makefile

--- a/ebook/master.tex
+++ b/ebook/master.tex
@@ -5,9 +5,9 @@
 
 
 \begin{document}
-	\title{The S3 Patterns Handbook}
-	\author{Bernhard Bockelbrink\\James Priest}
-	\date{2015-2016}
+	\title{Sociocracy 3.0 - A Practical Guide}
+	\author{Bernhard Bockelbrink\\James Priest\\Liliana David}
+	\date{2015-2018}
 	\maketitle
 	
 	\pagenumbering{arabic}
