consistent naming of ebook files

--- a/ebook/ebook-proof.tex
+++ b/ebook/ebook-proof.tex
@@ -1,5 +1,5 @@
 \documentclass[a5paper]{scrreprt}
-\usepackage{_style/cvstyle}
+\usepackage{ebook-style}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
@@ -18,5 +18,5 @@
 	\setcounter{tocdepth}{1}
 	\listoffigures
     
-    \include{ebook-compiled}
+    \include{tmp-ebook-compiled}
 \end {document}
