--- a/content/localization.pot
+++ b/content/localization.pot
@@ -1,6 +1,6 @@
 # continuation marker for follow-up slides
-msgid "(cont.)"
-msgstr "(cont.)"
+msgid "(…)"
+msgstr "(…)"
 
 # patterns (plural)
 msgid "Patterns"
