--- a/config/ebook.tex
+++ b/config/ebook.tex
@@ -1,8 +1,5 @@
 \documentclass[a5paper]{scrreprt}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{graphicx} 
-\usepackage{titlepic}
+\usepackage[american]{babel} % Deutsche Sprachanpassungen
 \usepackage{ebook-style}
 
 \title{${_("Sociocracy 3.0 - A Practical Guide")}}
@@ -12,6 +9,8 @@
 	
 \begin{document}
 	\maketitle
+	% different title for toc
+	\renewcommand{\contentsname}{${_("Contents")}}
 	\pagenumbering{arabic}
 	% limit toc to sections
 	\setcounter{tocdepth}{1}
