updated book title

--- a/config/ebook.tex
+++ b/config/ebook.tex
@@ -2,7 +2,7 @@
 \usepackage[american]{babel} % Deutsche Sprachanpassungen
 \usepackage{ebook-style}
 
-\title{${_("Sociocracy 3.0 - A Practical Guide")}}
+\title{${_("A Practical Guide for Evolving Agile and Resilient Organizations with Sociocracy 3.0")}}
 \author{Bernhard Bockelbrink\\James Priest\\Liliana David}
 \date{${version}}
 \titlepic{\includegraphics[width=6cm]{./img/framework/logo.png}}
