--- a/content/localization.pot
+++ b/content/localization.pot
@@ -10,9 +10,13 @@ msgstr "Patterns"
 msgid "Pattern"
 msgstr "Pattern"
 
-# site title for practical guide microsite and ebook
+# site title for practical guide microsite
 msgid "Sociocracy 3.0 - A Practical Guide"
 msgstr "Sociocracy 3.0 - A Practical Guide"
+
+# title for ebook
+msgid "A Practical Guide for Evolving Agile and Resilient Organizations with Sociocracy 3.0"
+msgstr "A Practical Guide for Evolving Agile and Resilient Organizations with Sociocracy 3.0"
 
 # site descriptions for practical guide microsite
 msgid "The official description of Sociocracy 3.0 — All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David."
