fixed translation memory

--- a/content/localization.pot
+++ b/content/localization.pot
@@ -22,9 +22,13 @@ msgstr "A Practical Guide for Evolving Agile and Resilient Organizations with So
 msgid "70+ Powerful Practices to Help You and Your Organization Thrive"
 msgstr "70+ Powerful Practices to Help You and Your Organization Thrive"
 
+# SE 2019
+msgid "Supporter Edition 2019"
+msgstr "Supporter Edition 2019"
+
 # site descriptions for practical guide microsite
-msgid "The official description of Sociocracy 3.0 — All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David."
-msgstr "The official description of Sociocracy 3.0 — All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David."
+msgid "The official description of Sociocracy 3.0 - All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David."
+msgstr "The official description of Sociocracy 3.0 - All patterns, the Seven Principles and key concepts. Maintained by Bernhard Bockelbrink, James Priest and Liliana David."
 
 # Headline for page "Concepts and Principles" in website
 msgid "Concepts and Principles"
