--- a/config/ebook.tex
+++ b/config/ebook.tex
@@ -1,11 +1,13 @@
 \documentclass[a5paper]{scrreprt}
-\usepackage[american]{babel} % Deutsche Sprachanpassungen
+\usepackage[american]{babel}
 \usepackage{ebook-style}
+\graphicspath{ {../../} }
+
 
 \title{${_("A Practical Guide for Evolving Agile and Resilient Organizations with Sociocracy 3.0")}}
 \author{Bernhard Bockelbrink\\James Priest\\Liliana David}
 \date{${version}}
-\titlepic{\includegraphics[width=6cm]{./img/framework/logo.png}}
+\titlepic{\includegraphics[width=6cm]{img/framework/logo.png}}
 	
 \begin{document}
 	\maketitle
@@ -19,4 +21,4 @@
     \include{tmp-ebook-compiled}
 	\setcounter{tocdepth}{1}
 	\listoffigures
-\end {document}
+\end{document}
