--- a/docs/404.md
+++ b/docs/404.md
@@ -1,8 +1,7 @@
 ---
+title: Sorry, the page you requested was not found
 permalink: /404.html
 ---
-
-# Sorry, the page you requested was not found
 
 If you arrived here from another language version of the practical guide, that is most likely because we renamed a pattern. 
 
