--- a/content/website/_templates/404.md
+++ b/content/website/_templates/404.md
@@ -7,4 +7,4 @@ If you arrived here from another language version of the practical guide, that i
 
 Consider taking a look at the  [&#9654;pattern index](pattern-index.html) or the  [&#9654;clickable pattern map index](map.html)  to find the pattern you're looking for, or go to the  [&#9654;home page](index.html) 
 
-Or visit the [S3 resources page ](https://sociocracy30.org/resources)  to see all available languages and formats of this guide, and other resources about S3. 
+You can also view [&#9654;everything on one page](all.html)), or visit the [&#9654;S3 resources page ](https://sociocracy30.org/resources)  to see all available languages and formats of this guide, and other resources about S3. 
