fixed illustrations in epub

--- a/config/ebook.tex
+++ b/config/ebook.tex
@@ -1,13 +1,11 @@
 \documentclass[a5paper]{scrreprt}
 \usepackage[american]{babel}
 \usepackage{ebook-style}
-\graphicspath{ {../../} }
-
 
 \title{${_("A Practical Guide for Evolving Agile and Resilient Organizations with Sociocracy 3.0")}}
 \author{Bernhard Bockelbrink\\James Priest\\Liliana David}
 \date{${version}}
-\titlepic{\includegraphics[width=6cm]{img/framework/logo.png}}
+\titlepic{\includegraphics[width=6cm]{./img/framework/logo.png}}
 	
 \begin{document}
 	\maketitle
