finished simplifying the temp folder structure

--- a/config/ebook.tex
+++ b/config/ebook.tex
@@ -16,7 +16,7 @@
 	\setcounter{tocdepth}{1}
 	\tableofcontents
 	% reset counter for list of figures
-    \include{tmp-ebook-compiled}
+    \include{ebook-compiled}
 	\setcounter{tocdepth}{1}
 	\listoffigures
 \end{document}
