ebook now is set ragged left

--- a/config/ebook-style.sty
+++ b/config/ebook-style.sty
@@ -5,7 +5,6 @@
 \usepackage[utf8]{inputenc} % support all unicode characters in documents 
 \usepackage[T1]{fontenc} % use 8bit font encoding for proper hyphenation etc.
 \usepackage{titlepic}
-\usepackage{graphicx}
 
 % for /autoref
 \usepackage{hyperref,xcolor}
@@ -34,6 +33,9 @@
 
 % for graphics
 \usepackage{graphicx}
+
+% ragged left
+\usepackage[document]{ragged2e}
 
 % make the pages a little wider
 \addtolength{\oddsidemargin}{-.1in}
