fixed ToC in pdf

--- a/config/ebook-style.sty
+++ b/config/ebook-style.sty
@@ -47,6 +47,9 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
+% for adding the title page as pdf
+\usepackage{pdfpages}
+
 % turn off numbering of sections
 \setcounter{secnumdepth}{1}
 
