cleaned up styles, formatting and metadata

--- a/config/ebook-style.sty
+++ b/config/ebook-style.sty
@@ -1,8 +1,6 @@
 \ProvidesPackage{ebook-style}
 %\usepackage{showframe} % display box borders for debugging
 
-
-\usepackage[utf8]{inputenc} % support all unicode characters in documents 
 \usepackage[T1]{fontenc} % use 8bit font encoding for proper hyphenation etc.
 \usepackage{titlepic}
 
@@ -66,7 +64,7 @@
 
 \setlength{\emergencystretch}{2em} % this remedies a few overfull/underfull hbox warnings
 
-% use fancyhdr for footer
+% use fancyhdr for footer (relevant for footnotes?)
 \usepackage{fancyhdr}
 \fancypagestyle{plain}{%
 	\fancyhf{} % clear all header and footer fields
